--- a/NeuralNetworkPackage/NeuralNetworkPackage/NeuralNetworkPackage.csproj
+++ b/NeuralNetworkPackage/NeuralNetworkPackage/NeuralNetworkPackage.csproj
@@ -33,10 +33,16 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Activation Functions\GaussianRadialBasisFunction.cs" />
+    <Compile Include="Activation Functions\RadialBasisFunction.cs" />
+    <Compile Include="KMeansPP.cs" />
+    <Compile Include="Neurons\Neuron.cs" />
+    <Compile Include="Neurons\RadialBasisHiddenNeuron.cs" />
+    <Compile Include="Neural Network\RadialBasisNeuralNetwork.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Neural Network\Neuron.cs" />
-    <Compile Include="Activation Functions\mathFunction.cs" />
+    <Compile Include="Neurons\FeedforwardNeuron.cs" />
+    <Compile Include="Activation Functions\MathFunction.cs" />
     <Compile Include="Neural Network\FeedforwardNeuralNetwrok.cs" />
     <Compile Include="Optimization Algorithms\LearningAlgorithm.cs" />
     <Compile Include="Optimization Algorithms\Backpropagation.cs" />
